# s14-21-n-python

./: .gitignore  README.md  package-lock.json  s14-21-n-python.code-workspace
backend/: .env  .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 123bf040f167_refactor_datetime_date.py  20bc59459829_add_cuit_supplier.py  2f08e1d2ce10_add_is_creator_to_user.py  34dc97277db3_reverse_fk_on_category_to_products_.py  3d9b93f12014_refactor_is_creator_nullable_true.py  4a9c987dbbcc_refactor_transaction_datetime_to_date.py  4d73a729608e_refactoring_and_fixin_models.py  838ffc65690f_add_description_to_product.py  9aed3bf32742_add_email_supplier.py  9bf728a12f0e_first_commit.py  9e02e1b19620_first_commit.py  cb27b0ed20c4_refactoring_and_fixin_models.py  cec936f4c70f_add_cuit_to_supplier.py  dad7f1a465c0_refactoring_datetime_to_date.py  (+1 more)
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  (+8 more)
backend/app/core/: config.py  database.py
backend/app/crud/: abstract.py  business.py  category.py  product.py  supplier.py  transaction.py  user.py
backend/app/models/: borrar.py  business.py  category.py  models.py  product.py  supplier.py  transaction.py  user.py  users.py
backend/app/schemas/: busines.py  category.py  common.py  product.py  supplier.py  transaction.py  user.py
backend/app/tests/: conftest.py
backend/app/utils/: hashPassword.py  oauth2.py  password.py  user.py
backend/scripts/: test.sh
(+64 files in other folders)
